--- a/globals.css
+++ b/globals.css
@@ -2,15 +2,19 @@
 
 :root {
     --sidebar-bg-color: #202123;
-    --app-bg-color: #343541;
+    --main-bg-color: #343541;
 }
 
 * {
     color: #fff;
     font-family: "Open Sans", sans-serif;
+    box-sizing: border-box;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+li {
+    list-style-type: none;
 }
